1.add social item juejin; \n\r 2.add a blog article

--- a/_config.melody.yml
+++ b/_config.melody.yml
@@ -58,6 +58,7 @@ social:
 #icon_name fab: url
   github fa: https://github.com/Dmaker1993
   weibo fa: https://blog.csdn.net/DMaker1993
+  rss fa: https://juejin.cn/user/3861140566457047
 
 # Algolia search
 # ---------------
